Broke my buttons. Fixed my buttons. Will probably break thema again.

--- a/styles.css
+++ b/styles.css
@@ -247,7 +247,7 @@ h1 {
 }
 
 #tab-container {
-    width: 76%;
+    width: 62%;
     margin: 0 auto;
     padding: 0 auto;
     display: flex;
@@ -311,11 +311,21 @@ h1 {
 }
 
 #textbox {
-    width:76% ;
+    width:62% ;
+    min-height: 32px;
+    height: fit-content;
+    max-height: 500px;
     margin: 0 auto;
     text-align: justify;
     border: 2px solid #000;
     padding: 5px 10px;
+    display: flex;
+    
+    /* transition-duration: 2000ms; */
+}
+
+#textbox p {
+    line-height: 1.3;
 }
 
 .a-tab {
@@ -366,6 +376,10 @@ input[name=tab]:checked ~ .tab-title .tab-text{
     -webkit-text-stroke: 2px black; */
 }
 
+/* .a-tab:hover ~ .table-title .tab-text {
+    background-color: blue;
+} */
+
 /* #contact-btn:checked ~ .tab-title .tab-text{
     background-color: #e74200da;
     mix-blend-mode:multiply;
@@ -375,6 +389,62 @@ input[name=tab]:checked ~ .tab-title .tab-text{
 
 
 
+#contact-div {
+    width: 100%;
+    height: 450px;
+    margin: 0 auto;
+    padding: 0;
+    border: 1px solid red;
+    text-align: center;
+    z-index: 10;
+    
+    
+}
+
+#contact-div-title {
+    width: 100%;
+    text-align: center;
+}
+
+.label-container {
+    margin: 10px 0;
+    width: 200px;
+    border: 1px solid green;
+    display: inline-block;
+}
+
+/* .label-container:nth-of-type(1), .label-container:nth-of-type(2) {
+    display: inline-block;
+}
+
+.label-container:nth-of-type(3), .label-container:nth-of-type(4) {
+    display: inline-block;
+} */
+
+ .contact-info {
+    width: 100%;
+}
+
+#text-container {
+    width: 100%;
+
+}
+
+textarea {
+    max-width: 100%;
+    min-width: 200px;
+    width: 400px;
+    min-height: 75px;
+}
+
+.text-hollow {
+  /* animation: type;
+  animation-duration: 12s;
+  animation-timing-function: steps(30, end);
+  animation-fill-mode: forwards; */
+    
+
+} 
 
 
 
@@ -547,6 +617,15 @@ input[name=tab]:checked ~ .tab-title .tab-text{
     .text-hollow {
         -webkit-text-stroke: 2px black;
     }
+
+    .tab-title {
+        width: 130px;
+        height: 50px;
+    }
+
+    .tab-text {
+        font-size: 24px;
+    }
 }
 
 
@@ -624,6 +703,14 @@ input[name=tab]:checked ~ .tab-title .tab-text{
 
     .text-hollow {
         -webkit-text-stroke: 2px black;
+    }
+    .tab-title {
+        width: 105px;
+        height: 40px;
+    }
+
+    .tab-text {
+        font-size: 20px;
     }
 
 }
@@ -713,6 +800,14 @@ input[name=tab]:checked ~ .tab-title .tab-text{
 
     .text-hollow {
         -webkit-text-stroke: 1px black;
+    }
+    .tab-title {
+        width: 70px;
+        height: 30px;
+    }
+
+    .tab-text {
+        font-size: 14px;
     }
 
 }
